--- a/letter/index.html
+++ b/letter/index.html
@@ -11,7 +11,7 @@
 	   			<table bgcolor="#ffffff" cellpadding="0" cellspacing="0" width="600px" style="font-family: Verdana; margin: 0; padding: 0;">
 		  			 <tr>
 			   			<td style="margin-bottom: 10px;">
-			   				<a href="#"><img src="https://raw.githubusercontent.com/YuliPolishchuk/YuliPolishchuk.github.io/master/letter/logo.png" alt="ButterflyUA" width="187px"></a>
+			   				<a href="#"><img src="https://raw.githubusercontent.com/YuliPolishchuk/YuliPolishchuk.github.io/master/letter/logo.png" alt="ButterflyUA" width="187"></a>
 			   			</td>
 			   			<td style="vertical-align: bottom;padding-bottom: 5px;">
 			   				<a href="#" style="color: #46b4da;  text-decoration: none; font-size: 12px;">SHAWS</a>
@@ -61,7 +61,7 @@
            				</tr>
 						<tr>
 							<td>
-								<table cellpadding="0" cellspacing="0" margin="0" padding="0">
+								<table cellpadding="0" cellspacing="0" style="margin:0; padding=0;">
 									<tr>
 										<td style="font-size:12px; color: #858383; padding-top:15px;padding-left: 20px;">Оплата:  </td>
 										<td colspan="2"  style="font-size: 13px;   padding-top:15px;">НАЛИЧНАЯ</td>
@@ -82,7 +82,7 @@
 						<tr>
 							<td colspan="3">
 								<center>
-									<img src="https://raw.githubusercontent.com/YuliPolishchuk/YuliPolishchuk.github.io/master/letter/img-bottom.png" alt="flower" width="477px">
+									<img src="https://raw.githubusercontent.com/YuliPolishchuk/YuliPolishchuk.github.io/master/letter/img-bottom.png" alt="flower" style="display:block; width:477px;">
 								</center>
 							</td>
 						</tr>
