--- a/letter/index.html
+++ b/letter/index.html
@@ -74,7 +74,7 @@
 									</tr>
 									<tr>
 										<td style="font-size:12px; color: #858383;padding-top:15px;padding-left: 20px;">Продавец</td>
-										<td colspan="2"><img src="logo.png" style="height: 40px;"></td>
+										<td colspan="2"><img src="https://raw.githubusercontent.com/YuliPolishchuk/YuliPolishchuk.github.io/master/letter/logo.png" style="height: 40px;"></td>
 									</tr>
 								</table>
 							</td>
