--- a/letter/index.html
+++ b/letter/index.html
@@ -8,7 +8,7 @@
   <table cellpadding="0" cellspacing="0" style="margin:0; padding:0;"">
   		<tr>
   			<td>
-	   			<table bgcolor="#ffffff" cellpadding="0" cellspacing="0" width="600px" style="font-family: Verdana; margin: 0; padding: 0;">
+	   			<table bgcolor="#ffffff" cellpadding="0" cellspacing="0" width="600" style="font-family: Verdana; margin: 0; padding: 0;">
 		  			 <tr>
 			   			<td style="margin-bottom: 10px;">
 			   				<a href="#"><img src="https://raw.githubusercontent.com/YuliPolishchuk/YuliPolishchuk.github.io/master/letter/logo.png" alt="ButterflyUA" width="187"></a>
@@ -39,7 +39,7 @@
 						</tr>
 						<tr>
 							<td style="font-size: 18px;padding:10px 20px;">Заказ №123415</td>
-         				    <td colspan="2" style="text-align: right; font-size: 11px;padding-top:10px; padding-right: 45px; width: 300px;">Дата: 01.04.2016</td>
+         				    		<td colspan="2" style="text-align: right; font-size: 11px;padding-top:10px; padding-right: 45px; width: 300px;">Дата: 01.04.2016</td>
 						</tr>
      					<tr>
         					<td style="font-size:12px; color: #858383;padding-left: 20px;">Название товара</td>
@@ -51,7 +51,7 @@
         				</tr>
        					<tr>
           					<td style="font-size: 17px;padding:15px 20px;">
-             					 <a style="color: #46b4da; text-decoration: none" href="#">Beige Ukrainian scarf</a>
+             					 	<a style="color: #46b4da; text-decoration: none" href="#">Beige Ukrainian scarf</a>
            					</td>
            					<td style="padding:15px 0;">1</td>
            					<td style="padding:15px 0;">300$</td>
