--- a/Sign form/index.html
+++ b/Sign form/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Form</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -10,7 +10,7 @@
 		<h2>
 			<span>Singup </span>form
 		</h2>
-		<form action="" method="post">
+		<form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
 			<div class="two">
 				<div class="two_surname">
 					<label for="surname"></label>
@@ -34,13 +34,10 @@
 				<input type="password" name="pass" id="pass" placeholder="Password" required>
 			</div>
 			<div>
-				<label for="agree" class="check__label">
+				<label for="agree" class="check__label">I Agree to the 
 				<input id="agree" type="checkbox" class="check_agree" name="agree">
 				<span class="box"></span>
-						I Agree to the 
-						<a href="#">
-							terms of use
-						</a>
+					<a href="#">terms of use</a>
 				</label>
 			</div>
 			
