--- a/Sign form/index.html
+++ b/Sign form/index.html
@@ -34,7 +34,7 @@
 				<input type="password" name="pass" id="pass" placeholder="Password" required class="main_form_input">
 			</div>
 			<div>
-				<input id="agree" type="checkbox" class="check_agree" name="agree" class="box">
+				<input id="agree" type="checkbox" class="check_agree" name="agree">
 				<label for="agree" class="check_label">I Agree to the 
 					<a href="#" class="main_decoration">
 						terms of use
