--- a/Elena/index.html
+++ b/Elena/index.html
@@ -11,7 +11,7 @@
 	<div class="main">
 		<header class="main_header">
 			<div class="logo">
-				<img src="images/logo.png">
+				<img src="images/logo.png" alt="logo">
 			</div>
 			<div class="menu">
 				<nav>
@@ -39,19 +39,19 @@
 		</header>
 		<section class="sectionOne">
 			<div class="sectionOne_user">
-				<img src="images/sectionOne_user.png">
+				<img src="images/sectionOne_user.png" alt="user">
 				<h2>profesionals</h2>
 				<div class="sectionOne_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
 			</div>
 			<div class="sectionOne_heart"> 
-				<img src="images/sectionOne_heart.png">
+				<img src="images/sectionOne_heart.png" alt="heart">
 				<h2>amateus</h2>
 				<div class="sectionOne_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
 			</div>
 			<div>
-				<img src="images/sectionOne_ear.png">
+				<img src="images/sectionOne_ear.png" alt="ear">
 				<h2> for everyone</h2>
 				<div class="sectionOne_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
@@ -59,14 +59,14 @@
 		</section>
 		<section class="sectionTwo">
 			<div class="sectionTwo_one">
-				<img src="images/sectiomTwo_one.png">
+				<img src="images/sectiomTwo_one.png" alt="car">
 				<h2>responsive email template</h2>
 				<div class="sectionTwo_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Donec interdum mollis</p>
 				<button class="section_button_green">Read more</button>
 			</div>
 			<div>
-				<img src="images/sectiomTwo_two.png">
+				<img src="images/sectiomTwo_two.png" alt="coupe">
 				<h2>fully compatible template</h2>
 				<div class="sectionTwo_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Donec interdum mollis</p>
@@ -83,21 +83,21 @@
 		</section>
 		<section class="sectionFour">
 			<div class="sectionFour_left">
-				<img src="images/sectionFour_one.png">
+				<img src="images/sectionFour_one.png" alt="light">
 				<h2>fully layared psd</h2>
 				<div class="sectionFour_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
 				<a href="#">Check this out > </a>
 			</div>
 			<div class="sectionFour_left"> 
-				<img src="images/sectionFour_two.png">
+				<img src="images/sectionFour_two.png" alt="people">
 				<h2>full compatibility</h2>
 				<div class="sectionFour_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
 				<a href="#">Check this out > </a>
 			</div>
 			<div>
-				<img src="images/sectionFour_three.png">
+				<img src="images/sectionFour_three.png" class="snekers">
 				<h2>very great modules</h2>
 				<div class="sectionFour_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
@@ -119,7 +119,7 @@
 			</div>
 		</section>
 		<section class="sectionSix">
-			<img src="images/sectionSix.png">
+			<img src="images/sectionSix.png" class="people">
 			<div  class="sectionSix_just" >
 				<h2>just for you on themforest</h2>
 				<div class="sectionSix_line"></div>
@@ -134,16 +134,16 @@
 			</div>
 			<div class="sectionSeven_image">
 				<div class="sectionSeven_marg">
-					<img src="images/elenaSeven_one.png">
+					<img src="images/elenaSeven_one.png" alt="logo">
 				</div>
 				<div class="sectionSeven_marg">
-					<img src="images/elenaSeven_Two.png">
+					<img src="images/elenaSeven_Two.png" alt="logo">
 				</div>
 				<div class="sectionSeven_marg">
-					<img src="images/elenaSeven_Three.png">
+					<img src="images/elenaSeven_Three.png" alt="logo">
 				</div>
 				<div class="sectionSeven_last">
-					<img src="images/elenaSeven_Four.png">
+					<img src="images/elenaSeven_Four.png" alt="logo">
 				</div>
 			</div>
 		</section>
