--- a/Elena/index.html
+++ b/Elena/index.html
@@ -17,16 +17,16 @@
 				<nav>
 	  				<ul>
 	    				<li>
-	    					<a href="#">home</a>
+	    					<a href="#home">home</a>
 	    				</li>
 	   			    	<li>
-	   			    		<a href="#">servises</a>
+	   			    		<a href="#servises">servises</a>
 	   			   	   </li>
 	   			    	<li>
-	   			    		<a href="#">features</a>
+	   			    		<a href="#features">features</a>
 	   			    	</li>
 	   			    	<li>
-	   			    		<a href="#">contact</a>
+	   			    		<a href="#contact">contact</a>
 	   			   	 	</li>
 	 				</ul>
 	 			</nav>
@@ -35,25 +35,19 @@
 			<div>
 	 			<p class="line">just for you on themforest</p>
 	 		</div>
-			<button class="main_header_button">get you copy now</button>
+			<a class="main_header_button" href="#">get you copy now</a>
 		</header>
-		<section class="sectionOne">
+		<section class="sectionOne" id="home">
 			<div class="sectionOne_user">
-				<img src="images/sectionOne_user.png" alt="user">
 				<h2>profesionals</h2>
-				<div class="sectionOne_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
 			</div>
 			<div class="sectionOne_heart"> 
-				<img src="images/sectionOne_heart.png" alt="heart">
 				<h2>amateus</h2>
-				<div class="sectionOne_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
 			</div>
-			<div>
-				<img src="images/sectionOne_ear.png" alt="ear">
+			<div class="sectionOne_ear">
 				<h2> for everyone</h2>
-				<div class="sectionOne_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
 			</div>
 		</section>
@@ -61,76 +55,66 @@
 			<div class="sectionTwo_one">
 				<img src="images/sectiomTwo_one.png" alt="car">
 				<h2>responsive email template</h2>
-				<div class="sectionTwo_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Donec interdum mollis</p>
-				<button class="section_button_green">Read more</button>
+				<a href="#" class="section_button_green">Read more</a>
 			</div>
 			<div>
 				<img src="images/sectiomTwo_two.png" alt="coupe">
 				<h2>fully compatible template</h2>
-				<div class="sectionTwo_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Donec interdum mollis</p>
-				<button class="section_button_green">Read more</button>
+				<a href="#" class="section_button_green">Read more</a>
 			</div>
 		</section>
-		<section class="sectionThree">
+		<section class="sectionThree" id="servises">
 			<div>
 				<h2>fully supporrted tempalate</h2>
-				<div class="sectionThree_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem commodo vitae. Ut semper semper lacus. Suspendisse convallis vel tellus at consectetur. Aenean risus arcu</p>
-				<button class="section_button_grey">Read more</button>
+				<a href="#" class="section_button_grey">Read more</a>
 			</div>
 		</section>
 		<section class="sectionFour">
 			<div class="sectionFour_left">
 				<img src="images/sectionFour_one.png" alt="light">
 				<h2>fully layared psd</h2>
-				<div class="sectionFour_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
 				<a href="#">Check this out > </a>
 			</div>
 			<div class="sectionFour_left"> 
 				<img src="images/sectionFour_two.png" alt="people">
 				<h2>full compatibility</h2>
-				<div class="sectionFour_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
 				<a href="#">Check this out > </a>
 			</div>
 			<div>
 				<img src="images/sectionFour_three.png" class="snekers">
 				<h2>very great modules</h2>
-				<div class="sectionFour_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
 				<a href="#">Check this out > </a>
 			</div>
 		</section>
-		<section class="sectionFive">
+		<section class="sectionFive" id="features">
 			<div class="sectionFive_send">
 				<h2>send in now</h2>
-				<div class="sectionFive_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem. </p>
-				<button class="section_button_green">Read more</button>
+				<a href="#" class="section_button_green">Read more</a>
 			</div>
 			<div  class="sectionFive_see" >
 				<h2>very nice to see</h2>
-				<div class="sectionFive_line"></div>
 				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem. </p>
-				<button class="section_button_green">Read more</button>
+				<a href="#" class="section_button_green">Read more</a>
 			</div>
 		</section>
 		<section class="sectionSix">
 			<img src="images/sectionSix.png" class="people">
-			<div  class="sectionSix_just" >
+			<div>
 				<h2>just for you on themforest</h2>
-				<div class="sectionSix_line"></div>
-				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem. </p>
-				<button class="section_button_grey">Read more</button>
+				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</p>
+				<a href="#" class="section_button_grey">Read more</a>
 			</div>
 		</section>
 		<section class="sectionSeven">
 			<div class="sectionSeven_star">
 				<h2>this template was featured on</h2>
-				<div class="sectionSeven_line"></div>
 			</div>
 			<div class="sectionSeven_image">
 				<div class="sectionSeven_marg">
@@ -148,10 +132,10 @@
 			</div>
 		</section>
 		<footer>
-			<div class="Elena">
-				<p class="text_dec">
+			<div class="Elena" id="contact">
+				<p class="text_dec_footer">
 					<span>Elena © </span>
-					copyrigth 2013 - Unsubscribe here
+					copyrigth 2013 - Unsubscribe <a href="#">here</a>
 				</p>
 			</div>
 			<div class="icon">
