--- a/Elena/index.html
+++ b/Elena/index.html
@@ -86,7 +86,7 @@
 				<a href="#">Check this out > </a>
 			</div>
 			<div>
-				<img src="images/sectionFour_three.png" class="snekers">
+				<img src="images/sectionFour_three.png" alt="snekers">
 				<h2>very great modules</h2>
 				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
 				<a href="#">Check this out > </a>
@@ -105,7 +105,7 @@
 			</div>
 		</section>
 		<section class="sectionSix">
-			<img src="images/sectionSix.png" class="people">
+			<img src="images/sectionSix.png" alt="people">
 			<div>
 				<h2>just for you on themforest</h2>
 				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</p>
