--- a/Elena/index.html
+++ b/Elena/index.html
@@ -10,144 +10,162 @@
 <body>
 	<div class="main">
 		<header class="main_header">
-			<div class="logo">
-				<img src="images/logo.png" alt="logo">
+			<div class="section_box">
+				<div class="logo">
+					<img src="images/logo.png" alt="logo">
+				</div>
+				<div class="menu">
+					<nav>
+		  				<ul>
+		    					<li>
+		    						<a href="#home">home</a>
+		    					</li>
+		   			    		<li>
+		   			    			<a href="#servises">servises</a>
+		   			   	   	</li>
+		   			    		<li>
+		   			    			<a href="#features">features</a>
+		   			    		</li>
+		   			    		<li>
+		   			    			<a href="#contact">contact</a>
+		   			   	 	</li>
+		 				</ul>
+		 			</nav>
+		 		</div>
+		 		<h1>have a good day</h1>
+				<div>
+		 			<p class="line">just for you on themforest</p>
+		 		</div>
+				<a class="main_header_button" href="#">get you copy now</a>
 			</div>
-			<div class="menu">
-				<nav>
-	  				<ul>
-	    					<li>
-	    						<a href="#home">home</a>
-	    					</li>
-	   			    		<li>
-	   			    			<a href="#servises">servises</a>
-	   			   	   	</li>
-	   			    		<li>
-	   			    			<a href="#features">features</a>
-	   			    		</li>
-	   			    		<li>
-	   			    			<a href="#contact">contact</a>
-	   			   	 	</li>
-	 				</ul>
-	 			</nav>
-	 		</div>
-	 		<h1>have a good day</h1>
-			<div>
-	 			<p class="line">just for you on themforest</p>
-	 		</div>
-			<a class="main_header_button" href="#">get you copy now</a>
 		</header>
 		<section class="sectionOne" id="home">
-			<div class="sectionOne_user">
-				<h2>profesionals</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
-			</div>
-			<div class="sectionOne_heart"> 
-				<h2>amateus</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
-			</div>
-			<div class="sectionOne_ear">
-				<h2> for everyone</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
+			<div class="section_box">
+				<div class="sectionOne_user">
+					<h2>profesionals</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
+				</div>
+				<div class="sectionOne_heart"> 
+					<h2>amateus</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
+				</div>
+				<div class="sectionOne_ear">
+					<h2> for everyone</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit</p>
+				</div>
 			</div>
 		</section>
 		<section class="sectionTwo">
-			<div class="sectionTwo_one">
-				<img src="images/sectiomTwo_one.png" alt="car">
-				<h2>responsive email template</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Donec interdum mollis</p>
-				<a href="#" class="section_button_green">Read more</a>
-			</div>
-			<div>
-				<img src="images/sectiomTwo_two.png" alt="coupe">
-				<h2>fully compatible template</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Donec interdum mollis</p>
-				<a href="#" class="section_button_green">Read more</a>
+			<div class="section_box ">
+				<div class="sectionTwo_one">
+					<img src="images/sectiomTwo_one.png" alt="car">
+					<h2>responsive email template</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Donec interdum mollis</p>
+					<a href="#" class="section_button_green">Read more</a>
+				</div>
+				<div>
+					<img src="images/sectiomTwo_two.png" alt="coupe">
+					<h2>fully compatible template</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Donec interdum mollis</p>
+					<a href="#" class="section_button_green">Read more</a>
+				</div>
 			</div>
 		</section>
 		<section class="sectionThree" id="servises">
-			<div>
-				<h2>fully supporrted tempalate</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem commodo vitae. Ut semper semper lacus. Suspendisse convallis vel tellus at consectetur. Aenean risus arcu</p>
-				<a href="#" class="section_button_grey">Read more</a>
+			<div class="section_box">
+				<div>
+					<h2>fully supporrted tempalate</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem commodo vitae. Ut semper semper lacus. Suspendisse convallis vel tellus at consectetur. Aenean risus arcu</p>
+					<a href="#" class="section_button_grey">Read more</a>
+				</div>
 			</div>
 		</section>
 		<section class="sectionFour">
-			<div class="sectionFour_left">
-				<img src="images/sectionFour_one.png" alt="light">
-				<h2>fully layared psd</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
-				<a href="#">Check this out > </a>
-			</div>
-			<div class="sectionFour_left"> 
-				<img src="images/sectionFour_two.png" alt="people">
-				<h2>full compatibility</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
-				<a href="#">Check this out > </a>
-			</div>
-			<div>
-				<img src="images/sectionFour_three.png" alt="snekers">
-				<h2>very great modules</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
-				<a href="#">Check this out > </a>
+			<div class="section_box ">
+				<div class="sectionFour_left">
+					<img src="images/sectionFour_one.png" alt="light">
+					<h2>fully layared psd</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
+					<a href="#">Check this out > </a>
+				</div>
+				<div class="sectionFour_left"> 
+					<img src="images/sectionFour_two.png" alt="people">
+					<h2>full compatibility</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
+					<a href="#">Check this out > </a>
+				</div>
+				<div>
+					<img src="images/sectionFour_three.png" alt="snekers">
+					<h2>very great modules</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet consectetur elit.</p>
+					<a href="#">Check this out > </a>
+				</div>
 			</div>
 		</section>
 		<section class="sectionFive" id="features">
-			<div class="sectionFive_send">
-				<h2>send in now</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem. </p>
-				<a href="#" class="section_button_green">Read more</a>
-			</div>
-			<div  class="sectionFive_see" >
-				<h2>very nice to see</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem. </p>
-				<a href="#" class="section_button_green">Read more</a>
+			<div class="section_box">
+				<div class="sectionFive_send">
+					<h2>send in now</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem. </p>
+					<a href="#" class="section_button_green">Read more</a>
+				</div>
+				<div  class="sectionFive_see" >
+					<h2>very nice to see</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem. </p>
+					<a href="#" class="section_button_green">Read more</a>
+				</div>
 			</div>
 		</section>
 		<section class="sectionSix">
-			<img src="images/sectionSix.png" alt="people">
-			<div>
-				<h2>just for you on themforest</h2>
-				<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</p>
-				<a href="#" class="section_button_grey">Read more</a>
+			<div class="section_box ">
+				<img src="images/sectionSix.png" alt="people">
+				<div>
+					<h2>just for you on themforest</h2>
+					<p class="text_dec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</p>
+					<a href="#" class="section_button_grey">Read more</a>
+				</div>
 			</div>
 		</section>
 		<section class="sectionSeven">
-			<div class="sectionSeven_star">
-				<h2>this template was featured on</h2>
-			</div>
-			<div class="sectionSeven_image">
-				<div class="sectionSeven_marg">
-					<img src="images/elenaSeven_one.png" alt="logo">
+			<div class="section_box ">
+				<div class="sectionSeven_star">
+					<h2>this template was featured on</h2>
 				</div>
-				<div class="sectionSeven_marg">
-					<img src="images/elenaSeven_Two.png" alt="logo">
-				</div>
-				<div class="sectionSeven_marg">
-					<img src="images/elenaSeven_Three.png" alt="logo">
-				</div>
-				<div class="sectionSeven_last">
-					<img src="images/elenaSeven_Four.png" alt="logo">
+				<div class="sectionSeven_image">
+					<div class="sectionSeven_marg">
+						<img src="images/elenaSeven_one.png" alt="logo">
+					</div>
+					<div class="sectionSeven_marg">
+						<img src="images/elenaSeven_Two.png" alt="logo">
+					</div>
+					<div class="sectionSeven_marg">
+						<img src="images/elenaSeven_Three.png" alt="logo">
+					</div>
+					<div class="sectionSeven_last">
+						<img src="images/elenaSeven_Four.png" alt="logo">
+					</div>
 				</div>
 			</div>
 		</section>
 		<footer>
-			<div class="Elena" id="contact">
-				<p class="text_dec_footer">
-					<span>Elena © </span>
-					copyrigth 2013 - Unsubscribe <a href="#">here</a>
-				</p>
-			</div>
-			<div class="icon">
-				<a href="#">
-					<i class="fab fa-google-plus-g"></i>
-				</a>
-				<a href="#">
-					<i class="fab fa-facebook-f"></i>
-				</a>
-				<a href="#">
-					<i class="fab fa-twitter"></i>
-				</a>
+			<div class="section_footer">
+				<div class="Elena" id="contact">
+					<p class="text_dec_footer">
+						<span>Elena © </span>
+						copyrigth 2013 - Unsubscribe <a href="#">here</a>
+					</p>
+				</div>
+				<div class="icon">
+					<a href="#">
+						<i class="fab fa-google-plus-g"></i>
+					</a>
+					<a href="#">
+						<i class="fab fa-facebook-f"></i>
+					</a>
+					<a href="#">
+						<i class="fab fa-twitter"></i>
+					</a>
+				</div>
 			</div>
 		</footer>
 	</div>
