--- a/Elena/index.html
+++ b/Elena/index.html
@@ -141,7 +141,7 @@
 					<div class="sectionSeven_marg">
 						<img src="images/elenaSeven_Three.png" alt="logo">
 					</div>
-					<div class="sectionSeven_last">
+					<div class="sectionSeven_marg">
 						<img src="images/elenaSeven_Four.png" alt="logo">
 					</div>
 				</div>
