--- a/flexGrid/index.html
+++ b/flexGrid/index.html
@@ -13,18 +13,19 @@
 		<div class="nav">NAVIGATION BAR</div>
 		<div class="footer">FOOTER</div>
 	</div>
-	<div class="header">
-  		<div class="logoFlex textDec">LOGO</div>
-  		<div class="menuFlex textDec">MENU</div>
+	<div>
+		<div class="header">
+  			<div class="logoFlex textDec">LOGO</div>
+  			<div class="menuFlex textDec">MENU</div>
+		</div>
+		<div class="content-container">
+  			<div class="content-container__left">
+    			<div class="newsFlex textDec">NEWS FEED</div>
+    			<div class="listFlex textDec">LIST OF SOME THING</div>
+    			<div class="footerFlex textDec">FOOTER</div>
+ 	 		</div>
+ 	 		<div class="navFlex textDec">NAVIGATION BAR</div>
+		</div>
 	</div>
-	<div class="content-container">
-  		<div class="content-container__left">
-    		<div class="newsFlex textDec">NEWS FEED</div>
-    		<div class="listFlex textDec">LIST OF SOME THING</div>
-    		<div class="footerFlex textDec">FOOTER</div>
- 	 	</div>
- 	 	<div class="navFlex textDec">NAVIGATION BAR</div>
-	</div>
-
 </body>
 </html>
