--- a/formBootstrap/index.html
+++ b/formBootstrap/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Personal Informaition</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -78,10 +78,10 @@
             An interesting fact about you!
           </legend>
           <div class="form-group row">
-            <p class="col-lg-3 col-sm-6">
+            <p class="col-sm-6 col-lg-3">
               Do you love cats?
             </p>
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-sm-6 col-lg-3">
               <div class="custom-control custom-radio">
                 <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
                 <label class="custom-control-label" for="customControlValidation2">
@@ -97,26 +97,26 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="color" class="col-lg-3 col-sm-6">
+            <label for="colr" class="col-sm-6 col-lg-3">
               What is your favorite color? 
             </label>
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-sm-6 col-lg-3">
               <input type="color" name="colr" id="colr" class= "form-control">
             </div>
           </div>
           <div class="form-group row">
-            <label for="timebed" class="col-lg-3 col-sm-6">
+            <label for="timebed" class="col-sm-6 col-lg-3">
               What time do you go to bed? 
             </label>
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-sm-6 col-lg-3">
               <input type="time" name="timebed" id="timebed" class="form-control">
             </div>
           </div>
           <div class="form-group row">
-            <label class="col-lg-3 col-sm-6">
+            <label class="col-sm-6 col-lg-3">
               What your favorite brand of car?
             </label>
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-sm-6 col-lg-3">
                 <select class="form-control costom-select" required size="4">
                      <option value="BMV">
                        BMV
@@ -131,16 +131,16 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="work" class="col-lg-3 col-sm-6">
+            <label for="work" class="col-sm-6 col-lg-3">
               How do you rete out work? 
             </label>
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-sm-6 col-lg-3">
               <input type="range" name="work" id="work" class="form-control-range custom-range pt-2">
             </div>
           </div>
         </fieldset>
         <div class="form-group row">
-          <div class="col-lg-6 col-sm-6 offset-lg-2 offset-sm-3">
+          <div class="col-sm-6 col-lg-6 offset-sm-3 offset-lg-2">
             <fieldset class="md-form">
               <legend class="md-3 text-primary">
                 Your comments:
@@ -150,9 +150,9 @@
           </div>
         </div>
 
-        <div class="row justify-content-end flex-row">
-          <input class="btn btn-primary btn-block col-lg-2 col-sm-2 mb-2 p-2" type="submit" value="Submit" name="submit">
-          <button class="btn btn-danger btn-block col-lg-2 col-sm-2 p-2" type="reset" >
+        <div class="flex-column form-inline align-items-end mb-5">
+          <input class="btn btn-primary btn-block col-sm-2 col-lg-2 mb-2 p-2" type="submit" value="Submit" name="submit">
+          <button class="btn btn-danger btn-block col-sm-2 col-lg-2 p-2" type="reset" >
             Reset
           </button>
         </div>
