--- a/formBootstrap/index.html
+++ b/formBootstrap/index.html
@@ -9,7 +9,7 @@
 <body class="bg-light">
   <div class="container">
     <div class="col-lg-12 text-center pt-4">
-      <span class="far fa-lightbulb fa-3x text-danger"></span>
+      <span class="far fa-lightbulb fa-3x text-danger"  data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?"></span>
       <h1 class="text-danger">
         Personal Information
       </h1>
@@ -158,5 +158,13 @@
         </div>
       </form>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>
+      $(function () {
+        $('[data-toggle="popover"]').popover();
+      });
+    </script>
 </body>
 </html>
